# sew

./: .gitignore  LICENSE  README.md  __init__.py  formatSpec.py  plugin_requirements.txt  plugins.py  pyproject.toml  setup.py  sew.py
.github/workflows/: auto-package.yml  run-unit-tests.yml
benchmarks/: __main__.py  _helpers.py  benchmarks.py
sew/: __init__.py  _core.py  blobInterpreter.py  column.py  condition.py  customrow.py  formatSpec.py  plugins.py
tests/: __main__.py  _helpers.py  benchmarks.py  blobcfg.ini  blobs.py  columns.py  columns_conditions.py  correctness.py  formatSpecifier.py  plugins.py  statements.py
