[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "s3ew"
authors = [
    {name = "icyveins7"}
]
description = "Sqlite Extensions and Wrappers"
license = {file = "LICENSE"}
version = "0.0.2"
keywords = ["sqlite", "wrapper", "extensions"]

[project.urls]
Repository = "https://github.com/icyveins7/sew"

[project.optional-dependencies]
plugins = [
    "numpy",
    "pandas",
    "python-dateutil",
    "pytz",
    "six",
    "tzdata"
]